--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
+    <div class="todo__up__container">
+    <div class="todo__container">
     <div class="top_cal">
     <table class="calendar">
         <div class="calendar__banner--month"><h1>11월</h1></div>
@@ -87,6 +89,8 @@
 
         </div>
     </div>
+</div>
+</div>
 
     <script type="text/javascript">
         $(".txtb").on("keyup",function(e){
@@ -97,7 +101,8 @@
                 var del = $("<i class='fas fa-trash-alt'></i>").click(function(){
                     var p = $(this).parent();
                     p.fadeOut(function(){
-                        p.remove();
+                        alert("삭제하였습니다"); 
+                        p.remove();                
                     });                
                 });
 
@@ -107,7 +112,8 @@
                         $(".comp").append(p);   
                         p.fadeIn();
                     });
-                    $(this).remove();    
+                    $(this).remove();   
+                    alert("수고하셨습니다");                     
                 });
 
                 task.append(del,check);
